force-app/main/default/objects/Risk_Rating__c/Risk_Rating__c.object-meta.xml
<CustomObject>
    <label>Risk Rating</label>
    <nameField>
        <displayFormat>RIS-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>