force-app/main/default/objects/Risk_Rating__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>