force-app/main/default/objects/Risk_Rating__c/fields/Category_Weight__c.field-meta.xml
<CustomField>
    <fullName>Category_Weight__c</fullName>
    <formula>CASE( Category__c ,
  &apos;Management&apos;, 15,
  &apos;Age of Business&apos;, 10,
  &apos;Market&apos;, 10,
  &apos;Credit History&apos;,10,
  &apos;Capacity of the Owners (Staying Power)&apos;,5,
  &apos;Home Ownership&apos;,5,
  &apos;Financial Debt Leverage&apos;,5,
  &apos;Working Capital&apos;,5,
  &apos;Repayment Ability&apos;,15,
  &apos;Security&apos;,15,
  &apos;Industry&apos;,5,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>