force-app/main/default/objects/Risk_Rating__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>CASE( Risk_Rating__c , 
   &apos;Very Low&apos;, 1, 
   &apos;Low&apos;, 2,
   &apos;Medium&apos;,3,
   &apos;High&apos;,4,
   &apos;Very High&apos;,5,
0) *  Category_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>