force-app/main/default/objects/Risk_Rating__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <type>TextArea</type>
</CustomField>