force-app/main/default/objects/Risk_Rating__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <label>Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Rating_Options</valueSetName>
    </valueSet>
</CustomField>